# english-word-atlas

./: .cursorignore  .gitignore  CHANGELOG.md  LICENSE.md  README-uv.md  README.md  ROADMAP.md  analysis.json  embedding_discrimination_task.py  fast_discrimination_task.py  list_all_wordlists.py  pyproject.toml  requirements.txt  run-with-uv.ps1  run-with-uv.sh  run_tests.py  semantic_discrimination_task.py
.github/workflows/: auto-approve.yml  ci.yml  publish.yml
data/: word_index.json
data/embeddings/: precomputed_embeddings.json
data/processed/: word_index.json
data/sources/AFINN/: NEG_1.json  NEG_2.json  NEG_3.json  NEG_4.json  NEG_5.json  NEUT_0.json  POS_1.json  POS_2.json  POS_3.json  POS_4.json  POS_5.json
data/sources/AVL/: ALL.json
data/sources/AWL/: ALL.json
data/sources/GSL/: NEW.json  ORIGINAL.json
data/sources/OGDEN/: BASIC_ACTION.json  BASIC_CONCEPT.json  BASIC_CONCRETE.json  BASIC_CONTRAST.json  BASIC_QUALITY.json  FIELD_ANIMAL.json  FIELD_BIZ.json  FIELD_BODY.json  FIELD_BUILD.json  FIELD_CLOTH.json  FIELD_COLOR.json  FIELD_DIR.json  FIELD_EDU.json  FIELD_FARM.json  FIELD_FOOD.json  FIELD_HOME.json  FIELD_MATH.json  FIELD_MATTER.json  FIELD_MOVE.json  FIELD_PERSON.json  FIELD_POLITIC.json  FIELD_TIME.json  FIELD_TOOL.json  FIELD_WAR.json  SUPP_ADD.json  SUPP_BIO.json  SUPP_CERT.json  SUPP_EXTRA.json  SUPP_GEO.json  SUPP_INTL.json  SUPP_ISCI.json  SUPP_MATH.json  SUPP_MODERN.json  SUPP_PHYSCHEM.json  SUPP_QUANT.json  SUPP_RADIO.json  SUPP_SCI.json  SUPP_SCIENCES.json  SUPP_SOCIAL.json  SUPP_SOUND.json  (+4 more)
data/sources/ROGET/: ABSTRACT.json  AUTHORITY.json  CAUSATION.json  CHANGE.json  COMMERCE.json  COMMUNICATION.json  CONFLICT.json  DIMENSION.json  EFFORT.json  EMOTION.json  EXISTENCE.json  INTERSOCIAL.json  KNOWLEDGE.json  LOCATION.json  MATTER.json  MEMORY.json  MORALITY.json  MOTION.json  NUMBERS.json  ORDER.json  PERCEPTION.json  PHYSICAL.json  POSITION.json  QUALITY.json  QUANTITY.json  SAFETY.json  SENSATION.json  SENTIMENT.json  SHAPE.json  SIMILARITY.json  TEMPORAL.json  TIME.json  VOLITION.json
data/sources/STOP/: FOX.json  LEARN.json  NLTK.json  SPACY.json
data/sources/SWADESH/: CORE.json  EXTENDED.json
data/wordlists/historical/: comprehensive.json  index.json
data/wordlists/historical/gsl/: comprehensive.json  gsl.json  index.json  new_gsl.json
data/wordlists/stop_words/: comprehensive.json  fox_stop_words.json  index.json  nltk_stop_words.json  sklearn_stop_words.json  spacy_stop_words.json
examples/: academic_wordlist.json  advanced_wordlist_operations.py  basic_usage.py  check_attributes.py  coverage_analysis.py  text_analysis.py  uncategorized_words.txt  update_intersocial.py  wordlist_builder_example.py  wordlist_example.py  wordlist_intersection.py
extra_scripts/: test_embedding_speed.py
output/: basic_vocabulary.json  basic_vocabulary.txt  comprehensive_vocabulary.json  descriptive_vocabulary.json  science_vocabulary.json
python/: pyproject.toml
python/examples/: arpabet_example.py  basic_usage.py  check_embedding_size.py  embedding_usage.py  frequencies_example.py  frequency_example.py  multi_word_arpabet_example.py  precomputed_embeddings_example.py  roget_phrases_test.py
python/scripts/: precompute_embeddings.py  precompute_frequencies.py  precompute_pronunciations.py
python/wordlists/: __init__.py  analysis.py  arpabet.py  embeddings.py  frequencies.py  registry.py  stop_words.py  types.py  wordlists.py
scripts/: convert_ngsl.py  convert_roget.py  create_ogden_basic_index.py  generate_gsl_meta.py  generate_historical_meta.py  generate_meta.py  generate_stop_words.py  generate_swadesh_meta.py  merge_wordlists.py  parse_ogden.py  parse_ogden_categories.py  parse_roget.py  process_avl.py  process_awl.py  process_subtlex.py  rename_source_files.py  split_afinn.py
scripts/stop_words/: extract_all.py  utils.py
scripts/stop_words/sources/: fox_words.py  gensim_words.py  nltk_words.py  sklearn_words.py  spacy_words.py
tests/: __init__.py  conftest.py  test_advanced_features.py  test_atlas.py  test_branch_coverage.py  test_cli.py  test_cli_branches.py  test_cli_more_branches.py  test_data.py  test_examples.py  test_main.py  test_wordlist.py
tests/unit/: test_atlas.py  test_cli.py  test_data.py  test_main.py  test_wordlist.py
word_atlas/: __init__.py  __main__.py  atlas.py  cli.py  data.py  wordlist.py
(+1149 files in other folders)
