[build-system]
# Use uv-friendly build system
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "english-word-atlas"
version = "0.2.0"
description = "A comprehensive dataset of English words and phrases with linguistic and semantic annotations"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = [
    "nlp",
    "linguistics",
    "semantics",
    "embeddings",
    "dataset",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "numpy>=1.24.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
visualization = [
    "matplotlib>=3.5.0",
]
web = [
    "flask>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=6.0.0",
    "black>=23.0.0",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.20.0",
    "hypothesis>=6.130.0",
]

[project.scripts]
word_atlas = "word_atlas.cli:main"

[project.urls]
Homepage = "https://github.com/neumanns-workshop/english-word-atlas"
Repository = "https://github.com/neumanns-workshop/english-word-atlas.git"
Issues = "https://github.com/neumanns-workshop/english-word-atlas/issues"
Changelog = "https://github.com/neumanns-workshop/english-word-atlas/blob/main/CHANGELOG.md"
Documentation = "https://github.com/neumanns-workshop/english-word-atlas/blob/main/README.md"

[tool.hatch.build.targets.wheel]
packages = ["word_atlas"]

[tool.hatch.build.targets.sdist]
include = [
    "word_atlas",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "integration: marks tests that require integration with external components",
]
addopts = [
    "--strict-markers",
    "-v",
]

[tool.coverage.run]
source = ["word_atlas"]
omit = [
    "tests/*",
    "examples/*",
    "**/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
show_missing = true
fail_under = 77 