[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wordlists"
version = "0.1.0"
description = "Programmatic API for accessing classic, widely-used English wordlists"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Wordlists Team"}
]
keywords = ["nlp", "wordlists", "linguistics", "stopwords"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "typing-extensions>=4.0.0",
    "numpy>=1.20.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/wordlists"
Issues = "https://github.com/yourusername/wordlists/issues"

[tool.setuptools]
packages = ["wordlists"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
wordlists = ["data/**/*.json"]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.5b2",
    "mypy>=0.812",
    "isort>=5.9.1",
    "flake8>=3.9.2",
]
embedding = [
    "sentence-transformers>=2.2.0"
]

[tool.black]
line-length = 100
target-version = ["py37", "py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false 